Set web sharing to stable

--- a/Fomalhaut2/Base.lproj/WebSharingViewController.xib
+++ b/Fomalhaut2/Base.lproj/WebSharingViewController.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="17701" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="19455" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
     <dependencies>
         <deployment identifier="macosx"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="17701"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="19455"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -25,8 +25,8 @@
             <subviews>
                 <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="9RG-XP-1qW">
                     <rect key="frame" x="18" y="236" width="444" height="16"/>
-                    <textFieldCell key="cell" lineBreakMode="clipping" title="Web sharing (EXPERIMENTAL)" usesSingleLineMode="YES" id="M01-49-yxD">
-                        <font key="font" metaFont="titleBar"/>
+                    <textFieldCell key="cell" lineBreakMode="clipping" title="Web sharing" usesSingleLineMode="YES" id="M01-49-yxD">
+                        <font key="font" usesAppearanceFont="YES"/>
                         <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
                         <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                     </textFieldCell>
@@ -47,7 +47,7 @@
                     </attributedString>
                 </textField>
                 <gridView xPlacement="leading" yPlacement="center" rowAlignment="none" rowSpacing="12" translatesAutoresizingMaskIntoConstraints="NO" id="r1y-bL-vH7">
-                    <rect key="frame" x="121" y="116" width="241" height="47"/>
+                    <rect key="frame" x="121" y="114" width="240" height="49"/>
                     <rows>
                         <gridRow id="XVR-Qf-k3T"/>
                         <gridRow id="xrh-E0-AyB"/>
@@ -59,7 +59,7 @@
                     <gridCells>
                         <gridCell row="XVR-Qf-k3T" column="W7c-em-vBo" id="SKW-JM-Dbm">
                             <textField key="contentView" horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="5XK-k0-WFT">
-                                <rect key="frame" x="-2" y="29" width="139" height="16"/>
+                                <rect key="frame" x="-2" y="31" width="138" height="16"/>
                                 <textFieldCell key="cell" lineBreakMode="clipping" title="Enter the port number" id="i0k-ei-doh">
                                     <font key="font" usesAppearanceFont="YES"/>
                                     <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
@@ -69,7 +69,7 @@
                         </gridCell>
                         <gridCell row="XVR-Qf-k3T" column="Qd9-8z-Kk1" id="7in-ZV-z4Z">
                             <textField key="contentView" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="B90-KP-T5F">
-                                <rect key="frame" x="141" y="26" width="100" height="21"/>
+                                <rect key="frame" x="140" y="28" width="100" height="21"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="100" id="0kj-kZ-Nvf"/>
                                     <constraint firstAttribute="height" constant="21" id="EUn-ic-0Z1"/>
@@ -83,7 +83,7 @@
                         </gridCell>
                         <gridCell row="xrh-E0-AyB" column="W7c-em-vBo" headOfMergedCell="leT-OZ-LKl" xPlacement="leading" id="leT-OZ-LKl">
                             <button key="contentView" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="B60-kE-kYE">
-                                <rect key="frame" x="-2" y="-2" width="226" height="18"/>
+                                <rect key="frame" x="-2" y="-1" width="230" height="18"/>
                                 <buttonCell key="cell" type="check" title="Stop after 10 minutes of inactivity" bezelStyle="regularSquare" imagePosition="left" state="on" inset="2" id="F8k-ae-bfY">
                                     <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
                                     <font key="font" metaFont="system"/>
@@ -94,7 +94,7 @@
                     </gridCells>
                 </gridView>
                 <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="OJv-Cb-db7">
-                    <rect key="frame" x="384" y="13" width="82" height="32"/>
+                    <rect key="frame" x="383" y="13" width="84" height="33"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="21" id="6a2-Yv-pz4"/>
                         <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="70" id="Eml-Kg-sW5"/>
@@ -108,7 +108,7 @@ DQ
                     </buttonCell>
                 </button>
                 <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="lVd-bD-Ffx">
-                    <rect key="frame" x="294" y="13" width="95" height="32"/>
+                    <rect key="frame" x="293" y="13" width="97" height="33"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="21" id="CEp-s9-qta"/>
                         <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="83" id="Oke-ZK-xqD"/>
@@ -128,7 +128,7 @@ Gw
                     </connections>
                 </button>
                 <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="OWQ-aa-aQ3">
-                    <rect key="frame" x="14" y="13" width="125" height="32"/>
+                    <rect key="frame" x="13" y="13" width="119" height="33"/>
                     <constraints>
                         <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="70" id="EFD-Xz-J8Q"/>
                         <constraint firstAttribute="height" constant="21" id="p1d-XQ-zqZ"/>
