--- a/Fomalhaut2/Base.lproj/BookCollection.storyboard
+++ b/Fomalhaut2/Base.lproj/BookCollection.storyboard
@@ -10,12 +10,12 @@
         <scene sceneID="nb1-9E-W0Z">
             <objects>
                 <viewController showSeguePresentationStyle="single" id="e60-p4-DRD" customClass="BookCollectionViewController" customModule="Fomalhaut2" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" id="e91-vB-5qh">
-                        <rect key="frame" x="0.0" y="0.0" width="270" height="196"/>
+                    <view key="view" misplaced="YES" id="e91-vB-5qh">
+                        <rect key="frame" x="0.0" y="0.0" width="270" height="170"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <subviews>
                             <tabView type="noTabsNoBorder" initialItem="Kzy-4H-3ed" translatesAutoresizingMaskIntoConstraints="NO" id="dk9-z2-loH">
-                                <rect key="frame" x="0.0" y="0.0" width="270" height="196"/>
+                                <rect key="frame" x="0.0" y="0.0" width="270" height="170"/>
                                 <font key="font" metaFont="system"/>
                                 <tabViewItems>
                                     <tabViewItem label="Thumbnail" identifier="" id="Kzy-4H-3ed">
@@ -63,17 +63,17 @@
                                     </tabViewItem>
                                     <tabViewItem label="List" identifier="" id="8UJ-3S-dgi">
                                         <view key="view" id="JNV-Oy-3Iq">
-                                            <rect key="frame" x="0.0" y="0.0" width="270" height="196"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="270" height="170"/>
                                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                             <subviews>
                                                 <scrollView autohidesScrollers="YES" horizontalLineScroll="19" horizontalPageScroll="10" verticalLineScroll="19" verticalPageScroll="10" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sbr-By-kXy">
-                                                    <rect key="frame" x="0.0" y="0.0" width="270" height="196"/>
+                                                    <rect key="frame" x="0.0" y="0.0" width="270" height="170"/>
                                                     <clipView key="contentView" id="cio-a6-iSI">
-                                                        <rect key="frame" x="1" y="1" width="268" height="194"/>
-                                                        <autoresizingMask key="autoresizingMask"/>
+                                                        <rect key="frame" x="1" y="1" width="268" height="168"/>
+                                                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                         <subviews>
-                                                            <tableView verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="lastColumnOnly" alternatingRowBackgroundColors="YES" columnSelection="YES" autosaveName="FileListView" rowSizeStyle="automatic" headerView="159-tO-4zi" viewBased="YES" id="BES-YB-qIc">
-                                                                <rect key="frame" x="0.0" y="0.0" width="268" height="169"/>
+                                                            <tableView verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="lastColumnOnly" alternatingRowBackgroundColors="YES" autosaveName="FileListView" rowSizeStyle="automatic" headerView="159-tO-4zi" viewBased="YES" id="BES-YB-qIc">
+                                                                <rect key="frame" x="0.0" y="0.0" width="268" height="143"/>
                                                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                                 <size key="intercellSpacing" width="3" height="2"/>
                                                                 <color key="backgroundColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
@@ -159,7 +159,7 @@
                                                                             <fragment content="ListViewHeader"/>
                                                                         </attributedString>
                                                                     </tableColumn>
-                                                                    <tableColumn identifier="like" width="35" minWidth="10" maxWidth="3.4028234663852886e+38" id="fcs-1m-87c">
+                                                                    <tableColumn identifier="like" width="10" minWidth="10" maxWidth="3.4028234663852886e+38" id="fcs-1m-87c">
                                                                         <tableHeaderCell key="headerCell" lineBreakMode="truncatingTail" borderStyle="border" alignment="left" title="Like">
                                                                             <color key="textColor" name="headerTextColor" catalog="System" colorSpace="catalog"/>
                                                                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -173,11 +173,11 @@
                                                                         <tableColumnResizingMask key="resizingMask" resizeWithTable="YES" userResizable="YES"/>
                                                                         <prototypeCellViews>
                                                                             <tableCellView id="Q4V-hi-Knx">
-                                                                                <rect key="frame" x="227" y="1" width="39" height="17"/>
+                                                                                <rect key="frame" x="227" y="1" width="14" height="17"/>
                                                                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                                                 <subviews>
                                                                                     <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" translatesAutoresizingMaskIntoConstraints="NO" id="T6g-vH-e7a">
-                                                                                        <rect key="frame" x="0.0" y="1" width="39" height="16"/>
+                                                                                        <rect key="frame" x="0.0" y="1" width="14" height="16"/>
                                                                                         <textFieldCell key="cell" lineBreakMode="truncatingTail" sendsActionOnEndEditing="YES" title="Table View Cell" id="UZv-tW-2pw">
                                                                                             <font key="font" usesAppearanceFont="YES"/>
                                                                                             <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
@@ -213,7 +213,7 @@
                                                         <rect key="frame" x="224" y="17" width="15" height="102"/>
                                                         <autoresizingMask key="autoresizingMask"/>
                                                     </scroller>
-                                                    <tableHeaderView key="headerView" id="159-tO-4zi">
+                                                    <tableHeaderView key="headerView" wantsLayer="YES" id="159-tO-4zi">
                                                         <rect key="frame" x="0.0" y="0.0" width="268" height="25"/>
                                                         <autoresizingMask key="autoresizingMask"/>
                                                     </tableHeaderView>
